mudancas rota das imgs 2

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <script defer src="assets/js/main.js"></script>
+  <link rel="stylesheet" href="/assets/css/styles.css">
+  <script defer src="/assets/js/main.js"></script>
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -111,7 +111,7 @@
                 <p>Planejamento executivo, gestão de fornecedores e entrega documentada para obras corporativas, industriais e residenciais.</p>
                 <div class="hero__cta">
                   <a class="btn btn--primary" href="https://wa.me/5511947344284?text=Ol%C3%A1,%20quero%20constru%C3%A7%C3%A3o%20ou%20reforma%20com%20a%20RW%20Mamedio" target="_blank" rel="noopener">Planejar minha obra</a>
-                  <a class="btn btn--ghost" href="construcao-reforma/">Ver detalhes</a>
+                  <a class="btn btn--ghost" href="/construcao-reforma/">Ver detalhes</a>
                 </div>
                 <ul class="hero__stats">
                   <li><strong>Curvas S auditadas</strong> e controle financeiro</li>
@@ -135,7 +135,7 @@
                 <p>Blend exclusiva, execução especializada e polimento profissional para ambientes resistentes e com acabamento impecável.</p>
                 <div class="hero__cta">
                   <a class="btn btn--primary" href="https://wa.me/5511947344284?text=Ol%C3%A1,%20quero%20um%20or%C3%A7amento%20de%20piso%20granilite%20RW%20Mamedio" target="_blank" rel="noopener">Solicitar orçamento</a>
-                  <a class="btn btn--ghost" href="piso-granilite/">Ver portfólio granilite</a>
+                  <a class="btn btn--ghost" href="/piso-granilite/">Ver portfólio granilite</a>
                 </div>
                 <ul class="hero__stats">
                   <li><strong>Polimento diamantado</strong> em múltiplas etapas</li>
@@ -159,7 +159,7 @@
                 <p>Due diligence, escrituras, licenças e AVCB com acompanhamento jurídico, execução das adequações e suporte em vistorias.</p>
                 <div class="hero__cta">
                   <a class="btn btn--primary" href="https://wa.me/5511947344284?text=Ol%C3%A1,%20preciso%20regularizar%20um%20im%C3%B3vel/AVCB%20com%20a%20RW%20Mamedio" target="_blank" rel="noopener">Iniciar regularização</a>
-                  <a class="btn btn--ghost" href="regularizacao-imoveis/">Ver jornada completa</a>
+                  <a class="btn btn--ghost" href="/regularizacao-imoveis/">Ver jornada completa</a>
                 </div>
                 <ul class="hero__stats">
                   <li><strong>Protocolos digitais</strong> com status em tempo real</li>
@@ -203,7 +203,7 @@
                 <li>Coordenação BIM e detalhamentos</li>
               </ul>
             </div>
-            <a class="service-card__link" href="projetos-arquitetonicos/">Ver detalhes</a>
+            <a class="service-card__link" href="/projetos-arquitetonicos/">Ver detalhes</a>
           </article>
           <article class="service-card">
             <div class="service-card__body">
@@ -215,7 +215,7 @@
                 <li>Atualização de cadastro e matrículas</li>
               </ul>
             </div>
-            <a class="service-card__link" href="regularizacao-imoveis/">Ver detalhes</a>
+            <a class="service-card__link" href="/regularizacao-imoveis/">Ver detalhes</a>
           </article>
           <article class="service-card">
             <div class="service-card__body">
@@ -227,7 +227,7 @@
                 <li>Implantação turnkey</li>
               </ul>
             </div>
-            <a class="service-card__link" href="interiores/">Ver detalhes</a>
+            <a class="service-card__link" href="/interiores/">Ver detalhes</a>
           </article>
           <article class="service-card">
             <div class="service-card__body">
@@ -239,7 +239,7 @@
                 <li>Execução e manutenção contínua</li>
               </ul>
             </div>
-            <a class="service-card__link" href="paisagismo/">Ver detalhes</a>
+            <a class="service-card__link" href="/paisagismo/">Ver detalhes</a>
           </article>
           <article class="service-card">
             <div class="service-card__body">
@@ -251,7 +251,7 @@
                 <li>Relatórios fotográficos semanais</li>
               </ul>
             </div>
-            <a class="service-card__link" href="acompanhamento-obra/">Ver detalhes</a>
+            <a class="service-card__link" href="/acompanhamento-obra/">Ver detalhes</a>
           </article>
           <article class="service-card">
             <div class="service-card__body">
@@ -263,7 +263,7 @@
                 <li>Modelagens para móveis planejados</li>
               </ul>
             </div>
-            <a class="service-card__link" href="ilustracoes-digitais/">Ver detalhes</a>
+            <a class="service-card__link" href="/ilustracoes-digitais/">Ver detalhes</a>
           </article>
           <article class="service-card">
             <div class="service-card__body">
@@ -275,7 +275,7 @@
                 <li>Entrega turnkey com comissionamento</li>
               </ul>
             </div>
-            <a class="service-card__link" href="construcao-reforma/">Ver detalhes</a>
+            <a class="service-card__link" href="/construcao-reforma/">Ver detalhes</a>
           </article>
           <article class="service-card">
             <div class="service-card__body">
@@ -287,7 +287,7 @@
                 <li>Plano de manutenção assistida</li>
               </ul>
             </div>
-            <a class="service-card__link" href="piso-granilite/">Ver detalhes</a>
+            <a class="service-card__link" href="/piso-granilite/">Ver detalhes</a>
           </article>
           <article class="service-card">
             <div class="service-card__body">
@@ -299,7 +299,7 @@
                 <li>Acompanhamento em vistoria oficial</li>
               </ul>
             </div>
-            <a class="service-card__link" href="avcb/">Ver detalhes</a>
+            <a class="service-card__link" href="/avcb/">Ver detalhes</a>
           </article>
         </div>
       </div>
