--- a/public/interiores/index.html
+++ b/public/interiores/index.html
@@ -8,8 +8,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../assets/css/styles.css">
-  <script defer src="../assets/js/main.js"></script>
+  <link rel="stylesheet" href="/assets/css/styles.css">
+  <script defer src="/assets/js/main.js"></script>
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -43,7 +43,7 @@
 <body>
   <header class="site-header">
     <div class="container site-header__row">
-      <a class="brand" href="../" aria-label="RW Mamedio - início">
+      <a class="brand" href="/" aria-label="RW Mamedio - início">
         <img src="/assets/img/logo/RWMamedio.png" alt="Logotipo RW Mamedio" width="56" height="56">
         <span class="brand__text">
           <strong>RW Mamedio</strong>
@@ -61,10 +61,10 @@
           <span></span>
           <span></span>
         </button>
-        <a href="../#inicio" data-nav-link>Início</a>
-        <a href="../#servicos" data-nav-link>Serviços</a>
-        <a href="../#sobre" data-nav-link>Sobre</a>
-        <a href="../#contato" data-nav-link>Contato</a>
+        <a href="/#inicio" data-nav-link>Início</a>
+        <a href="/#servicos" data-nav-link>Serviços</a>
+        <a href="/#sobre" data-nav-link>Sobre</a>
+        <a href="/#contato" data-nav-link>Contato</a>
         <a class="btn btn--outline" href="https://wa.me/5511947344284?text=Ol%C3%A1,%20quero%20um%20projeto%20de%20interiores%20com%20a%20RW%20Mamedio" target="_blank" rel="noopener">WhatsApp</a>
       </nav>
     </div>
@@ -78,7 +78,7 @@
           <p>Desenvolvemos ambientes corporativos e residenciais com ergonomia, tecnologia e estética coerente com a estratégia da empresa ou estilo de vida da família.</p>
           <div class="hero__cta">
             <a class="btn btn--primary" href="https://wa.me/5511947344284?text=Ol%C3%A1,%20quero%20um%20projeto%20de%20interiores%20com%20a%20RW%20Mamedio" target="_blank" rel="noopener">Solicitar proposta</a>
-            <a class="btn btn--ghost" href="../">Voltar para o hub</a>
+            <a class="btn btn--ghost" href="/">Voltar para o hub</a>
           </div>
           <ul class="hero__stats">
             <li><strong>Workplace strategy</strong> e análise de fluxos</li>
@@ -187,9 +187,9 @@
     <div class="container site-footer__row">
       <p>&copy; <span id="ano-atual"></span> RW Mamedio Engenharia Integrada.</p>
       <nav aria-label="Rodapé">
-        <a href="../#servicos">Serviços</a>
-        <a href="../#sobre">Sobre</a>
-        <a href="../#contato">Contato</a>
+        <a href="/#servicos">Serviços</a>
+        <a href="/#sobre">Sobre</a>
+        <a href="/#contato">Contato</a>
       </nav>
     </div>
   </footer>
