--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       "image": "https://www.rwmamedio.com.br/assets/img/pisos_granilite/job_1.jpeg",
       "description": "Engenharia integrada com serviços de projetos, regularização, interiores, paisagismo, acompanhamento de obras, ilustrações digitais, construção, pisos granilite e AVCB.",
       "telephone": "+55 11 94734-4284",
-      "email": "contato@rwmamedio.com.br",
+      "email": "Robsonwm72@gmail.com",
       "address": {
         "@type": "PostalAddress",
         "addressCountry": "BR"
@@ -336,11 +336,11 @@
           <p>Envie sua necessidade agora mesmo e receba um retorno especializado com escopo, cronograma e orçamento preliminar.</p>
           <div class="contact__actions">
             <a class="btn btn--primary" href="https://wa.me/5511947344284?text=Ol%C3%A1,%20quero%20um%20or%C3%A7amento%20RW%20Mamedio" target="_blank" rel="noopener">WhatsApp imediato</a>
-            <a class="btn btn--ghost" href="mailto:contato@rwmamedio.com.br">contato@rwmamedio.com.br</a>
+            <a class="btn btn--ghost" href="mailto:Robsonwm72@gmail.com">Robsonwm72@gmail.com</a>
           </div>
           <ul class="contact__data">
             <li><strong>Telefone:</strong> (11) 94734-4284</li>
-            <li><strong>CNPJ:</strong> 00.000.000/0001-00</li>
+            <li><strong>CNPJ:</strong> 35779930000170</li>
           </ul>
         </div>
         <div class="contact__card">
@@ -358,7 +358,7 @@
 
   <footer class="site-footer">
     <div class="container site-footer__row">
-      <p>&copy; <span id="ano-atual"></span> RW Mamedio Engenharia Integrada. Todos os direitos reservados.</p>
+      <p>&copy; 2025 RW Mamedio Construcao e Reformas Todos os direitos reservados.</p>
       <nav aria-label="Rodapé">
         <a href="#servicos">Serviços</a>
         <a href="#sobre">Sobre</a>
