--- a/public/interiores/index.html
+++ b/public/interiores/index.html
@@ -168,7 +168,7 @@
           <p>Envie briefing com necessidades, cultura da empresa ou estilo desejado e receba proposta completa.</p>
           <div class="contact__actions">
             <a class="btn btn--primary" href="https://wa.me/5511947344284?text=Ol%C3%A1,%20quero%20um%20projeto%20de%20interiores%20com%20a%20RW%20Mamedio" target="_blank" rel="noopener">Falar agora</a>
-            <a class="btn btn--ghost" href="mailto:contato@rwmamedio.com.br">Enviar briefing</a>
+            <a class="btn btn--ghost" href="mailto:Robsonwm72@gmail.com">Enviar briefing</a>
           </div>
         </div>
         <div class="contact__card">
