--- a/public/piso-epoxi/index.html
+++ b/public/piso-epoxi/index.html
@@ -196,7 +196,7 @@
           <p>Nossos especialistas realizam inspeção, testes de umidade e definem o sistema mais adequado para sua operação.</p>
           <div class="contact__actions">
             <a class="btn btn--primary" href="https://wa.me/5511947344284?text=Ol%C3%A1,%20quero%20um%20or%C3%A7amento%20de%20piso%20ep%C3%B3xi%20RW%20Mamedio" target="_blank" rel="noopener">Falar no WhatsApp</a>
-            <a class="btn btn--ghost" href="mailto:contato@rwmamedio.com.br">Enviar briefing</a>
+            <a class="btn btn--ghost" href="mailto:Robsonwm72@gmail.com">Enviar briefing</a>
           </div>
         </div>
         <div class="contact__card">
