--- a/public/projetos-arquitetonicos/index.html
+++ b/public/projetos-arquitetonicos/index.html
@@ -178,7 +178,7 @@
           <p>Compartilhe briefing, área aproximada e objetivos do empreendimento para receber proposta personalizada.</p>
           <div class="contact__actions">
             <a class="btn btn--primary" href="https://wa.me/5511947344284?text=Ol%C3%A1,%20quero%20projetos%20arquitet%C3%B4nicos%20RW%20Mamedio" target="_blank" rel="noopener">WhatsApp imediato</a>
-            <a class="btn btn--ghost" href="mailto:contato@rwmamedio.com.br">Enviar briefing</a>
+            <a class="btn btn--ghost" href="mailto:Robsonwm72@gmail.com">Enviar briefing</a>
           </div>
         </div>
         <div class="contact__card">
