--- a/public/acompanhamento-obra/index.html
+++ b/public/acompanhamento-obra/index.html
@@ -179,7 +179,7 @@
           <p>Envie escopo, cronograma atual e desafios. Nossa equipe monta proposta com equipe e indicadores personalizados.</p>
           <div class="contact__actions">
             <a class="btn btn--primary" href="https://wa.me/5511947344284?text=Ol%C3%A1,%20quero%20acompanhamento%20t%C3%A9cnico%20de%20obra%20com%20a%20RW%20Mamedio" target="_blank" rel="noopener">WhatsApp imediato</a>
-            <a class="btn btn--ghost" href="mailto:contato@rwmamedio.com.br">Enviar cronograma</a>
+            <a class="btn btn--ghost" href="mailto:Robsonwm72@gmail.com">Enviar cronograma</a>
           </div>
         </div>
         <div class="contact__card">
