--- a/public/paisagismo/index.html
+++ b/public/paisagismo/index.html
@@ -169,7 +169,7 @@
           <p>Envie fotos, plantas e expectativas. Retornamos com conceito inicial e cronograma de implantação.</p>
           <div class="contact__actions">
             <a class="btn btn--primary" href="https://wa.me/5511947344284?text=Ol%C3%A1,%20quero%20projeto%20de%20paisagismo%20com%20a%20RW%20Mamedio" target="_blank" rel="noopener">WhatsApp imediato</a>
-            <a class="btn btn--ghost" href="mailto:contato@rwmamedio.com.br">Enviar briefing</a>
+            <a class="btn btn--ghost" href="mailto:Robsonwm72@gmail.com">Enviar briefing</a>
           </div>
         </div>
         <div class="contact__card">
