--- a/public/piso-granilite/index.html
+++ b/public/piso-granilite/index.html
@@ -188,7 +188,7 @@
           <p>Envie fotos e metragem aproximada do seu projeto para receber uma proposta completa com cronograma, metodologia e garantia.</p>
           <div class="contact__actions">
             <a class="btn btn--primary" href="https://wa.me/5511947344284?text=Ol%C3%A1,%20quero%20um%20or%C3%A7amento%20de%20piso%20granilite%20RW%20Mamedio" target="_blank" rel="noopener">Falar agora no WhatsApp</a>
-            <a class="btn btn--ghost" href="mailto:contato@rwmamedio.com.br">Enviar e-mail</a>
+            <a class="btn btn--ghost" href="mailto:Robsonwm72@gmail.com">Enviar e-mail</a>
           </div>
         </div>
         <div class="contact__card">
