--- a/public/regularizacao-imoveis/index.html
+++ b/public/regularizacao-imoveis/index.html
@@ -170,7 +170,7 @@
           <p>Apresente o contexto do imóvel, pendências conhecidas e urgências. Nossa equipe retorna em até 24 horas úteis.</p>
           <div class="contact__actions">
             <a class="btn btn--primary" href="https://wa.me/5511947344284?text=Ol%C3%A1,%20preciso%20regularizar%20um%20im%C3%B3vel%20com%20a%20RW%20Mamedio" target="_blank" rel="noopener">WhatsApp imediato</a>
-            <a class="btn btn--ghost" href="mailto:contato@rwmamedio.com.br">Enviar documentação</a>
+            <a class="btn btn--ghost" href="mailto:Robsonwm72@gmail.com">Enviar documentação</a>
           </div>
         </div>
         <div class="contact__card">
