--- a/public/restauracao-granilite/index.html
+++ b/public/restauracao-granilite/index.html
@@ -196,7 +196,7 @@
           <p>Envie fotos e informações do seu piso granilite. Nosso time indica o melhor tratamento, prazo e investimento.</p>
           <div class="contact__actions">
             <a class="btn btn--primary" href="https://wa.me/5511947344284?text=Ol%C3%A1,%20quero%20um%20diagn%C3%B3stico%20de%20restaura%C3%A7%C3%A3o%20de%20granilite%20RW%20Mamedio" target="_blank" rel="noopener">Chamar no WhatsApp</a>
-            <a class="btn btn--ghost" href="mailto:contato@rwmamedio.com.br">Enviar briefing</a>
+            <a class="btn btn--ghost" href="mailto:Robsonwm72@gmail.com">Enviar briefing</a>
           </div>
         </div>
         <div class="contact__card">
